# CEIA-AprendizajeRefuerzoII

./: .gitignore  Implementacion_manual_A2C_PPO_SAC_PointEnv.ipynb  README.md  a2c_pointenv.py  comparativa_algoritmos_bipedal.ipynb  ppo_pointenv.py  pyproject.toml  sac_pointenv.py
a2c_tensorboard/A2C_1/: events.out.tfevents.1760817936.agustin-Legion-7-16ITHg6.5147.8
logs/A2C/: events.out.tfevents.1760797532.agustin-Legion-7-16ITHg6.5147.0  progress.csv
logs/PPO/: events.out.tfevents.1760797875.agustin-Legion-7-16ITHg6.5147.1  progress.csv
logs/SAC/: events.out.tfevents.1760798177.agustin-Legion-7-16ITHg6.5147.2  progress.csv
logs/a2c/: evaluations.npz  events.out.tfevents.1760821585.agustin-Legion-7-16ITHg6.5147.11  events.out.tfevents.1760833005.agustin-Legion-7-16ITHg6.105475.1  events.out.tfevents.1760875426.agustin-Legion-7-16ITHg6.105475.5  events.out.tfevents.1760875605.agustin-Legion-7-16ITHg6.105475.6  events.out.tfevents.1760881550.agustin-Legion-7-16ITHg6.105475.13  monitor.csv  progress.csv
logs/ppo/: evaluations.npz  events.out.tfevents.1760821155.agustin-Legion-7-16ITHg6.5147.10  events.out.tfevents.1760828820.agustin-Legion-7-16ITHg6.105475.0  events.out.tfevents.1760876025.agustin-Legion-7-16ITHg6.105475.7  events.out.tfevents.1760881780.agustin-Legion-7-16ITHg6.105475.14  monitor.csv  progress.csv
logs/sac/: evaluations.npz  events.out.tfevents.1760822028.agustin-Legion-7-16ITHg6.5147.12  events.out.tfevents.1760837230.agustin-Legion-7-16ITHg6.105475.2  events.out.tfevents.1760873812.agustin-Legion-7-16ITHg6.105475.3  monitor.csv  progress.csv  (+5 more)
(+5 files in other folders)
