[project]
name = "ceia-aprendizajerefuerzoii"
version = "0.1.0"
description = ""
authors = [
    {name = "Agustin Lopez Fredes",email = "agustin.lopezfredes@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11, <3.13"
dependencies = [
    "torch (>=2.9.0,<3.0.0)",
    "torchvision (>=0.24.0,<0.25.0)",
    "torchaudio (>=2.9.0,<3.0.0)",
    "numpy (>=2.3.4,<3.0.0)",
    "gymnasium[box2d] (>=1.2.1,<2.0.0)",
    "stable-baselines3[extra] (>=2.7.0,<3.0.0)",
    "ipykernel (>=7.0.1,<8.0.0)",
    "matplotlib (>=3.10.7,<4.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "swig (>=4.3.1.post0,<5.0.0)",
    "tensorboard (>=2.20.0,<3.0.0)",
    "moviepy (>=2.2.1,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.source]]
name = "torch"
url = "https://download.pytorch.org/whl/cu126"
priority = "supplemental"

